<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cart_align_policy</name>
  <version>0.0.1</version>
  <description>ONNX policy inference node for cart alignment.</description>
  <maintainer email="kwon@todo.todo">kwon</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>cart_align_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-onnxruntime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
